Fix issue with header image overlapping text

--- a/src/components/App/Header/styles.scss
+++ b/src/components/App/Header/styles.scss
@@ -158,7 +158,7 @@
 }
 
 /* Portrait and Landscape */
-@media only screen and (max-width: 480px) {
+@media (max-width: 480px) {
   .center-text {
     .text {
       font-size: 70px;
@@ -179,7 +179,7 @@
   }
 }
 
-@media only screen and (min-device-width: 480px) {
+@media (min-device-width: 480px) {
   .desktop-image {
     display: block;
   }
